fixed sizing issue
-shelter finds img caption was too big
-reduced width to 100% of container

--- a/styles.css
+++ b/styles.css
@@ -1192,8 +1192,10 @@ span{
     gap: 2px;
     justify-content: center;
     align-items: center;
+    max-width: 50%;
     & img{
         max-height: 366px;
+        width: 100%;
     }
 }
 .list_comparison{
